# mcp_public

./: .tool-versions  LICENSE
note/: README.md  pyproject.toml
note/src/note/: server.py
