[project]
name = "note"
version = "0.1.0"
description = "default mcp project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.3.0",]
[[project.authors]]
name = "Shinsaku Maeda"
email = "shinsaku@maedagen.co.jp"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
note = "note:main"
